# heuristics-contest

./: README.md
ahc001/: Cargo.toml
future-contest-2021-qual/: Cargo.toml  out.txt
future-contest-2021-qual/testCase/: testCase_1234213.txt  testCase_1234214.txt  testCase_1234215.txt  testCase_1234216.txt  testCase_1234217.txt
intro-heuristics/: Cargo.toml  README.md
intro-heuristics/src/: main.rs
