[package]
name = "intro-heuristics"
version = "0.1.0"
authors = ["Yuji Nagaoka <yvay5cqe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
proconio = { version = "=0.3.6", features = ["derive"] }
rand = "0.7.3"